bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if((a<=20 && a>=10) || (b<=20 && b>=10)) return true
  ^